testsuite/tests/grammar/invalid_rule_usage/test.out
== foo.lkt ==
foo.lkt:5:41: error: Unknown rule: 'sec_rules'.
5 |     @main_rule main_rule <- ExampleNode(sec_rules)
  |                                         ^^^^^^^^^


lkt_compile: Done
